@@ -1,4 +1,9 @@
 
+2009-07-08  Douglas Soares de Andrade  <douglas@archlinux.org>
+
+	* Improved PKGBUILD and installing the removed vim files
+	* The oscar goes to: Magnus Therning =)
+
 2009-07-06  Douglas Soares de Andrade  <douglas@archlinux.org>
 
 	* Removed vim files for mercurial.
